# prefect-mariadb-deepchecks

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  conftest.py  main.py  pyproject.toml
.dvc/: config
data/: test.parquet
data/processed/: test.parquet  test.parquet.dvc  train.parquet.dvc
data/raw/: dataset_raw.csv.dvc
docs/: 01_introduccion.md  prompts.txt
models/: RandomForestClassifier.pkl
notebooks/: data_integrity.ipynb  pipelines.ipynb  split_dataset.ipynb
pipelines/: best_pipeline.pkl
reports/: data_integrity_report.md  train_test_validation_report.md
scripts/: data_generation.sh  dvc_remote_setup.sh  dvc_versioning_processed_data.sh  dvc_versioning_raw_data.sh  main.sh  run_tests.sh  version_raw_data.sh
src/: fetch_data.py  generate_data.py  load_data.py  model.py  pipelines.py  split_dataset.py
src/database/: Dockerfile  connection.py  data_loader.py  test_connection.py
src/features/: pipelines.py  split_dataset.py
terraform/: .terraform.lock.hcl  init.sh  mariadb.tf  terraform.tfstate.backup  terraform.tfvars.example  variables.tf
terraform/data/: init.sh
test/: test_columns_are_unique.py  test_data_integrity_suite.py  test_dataframe_not_empty.py
tests/: test_columns_are_unique.py  test_data_integrity_suite.py  test_dataframe_not_empty.py  test_split_validation.py
