[project]
name = "venv-feast-aws-deepchecks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "feast>=0.49.0",
    "feature-engine>=1.8.3",
    "pymysql>=1.1.1",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "anywidget>=0.9.18",
    "deepchecks>=0.19.1",
    "jupyter>=1.1.1",
    "plotly>=6.0.1",
    "pytest>=8.3.5",
]
