[project]
name = "venv-prefect-mariadb-deepchecks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "feature-engine>=1.8.3",
    "prefect>=3.4.1",
    "pyarrow>=20.0.0",
    "pymysql>=1.1.1",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "anywidget>=0.9.18",
    "deepchecks>=0.19.1",
    "dvc>=3.59.2",
    "jupyter>=1.1.1",
    "mypy>=1.15.0",
    "plotly>=6.0.1",
    "pre-commit>=4.2.0",
    "pydocstyle>=6.3.0",
    "pytest>=8.3.5",
    "ruff>=0.11.10",
]

[tool.ruff]
line-length = 88         # Longitud máxima de línea (como Black)
target-version = "py312" # Versión de Python objetivo

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "D"]
ignore = [
    "E501",   # Ignora longitud de línea
    "D203",   # Ignora blank line before class (incompatible con D211)
    "D212",   # Ignora summary in first line (incompatible con D213)
    "D413",
    "D104"
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["D"]

[tool.ruff.format]
quote-style = "single"   # Usa comillas simples en el formateo (opcional)

[tool.pydocstyle]
convention = "google"
add-ignore = ["D212", "D203", "D413", "D104"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
strict = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
ignore_missing_imports = true

exclude = [
    "tests/",          # Ignora tests si no tienen anotaciones de tipo
    "scripts/",        # Ignora scripts auxiliares
    "**/__init__.py",  # Opcional: ignora docstrings en __init__
]

# Configuración específica para ciertos módulos o paquetes
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = true

[tool.bandit]
exclude_dirs = [".venv", ".git", "tests", "__pycache__"]
skips = ["B101"]  # No alertar por 'assert'
